[gd_scene load_steps=12 format=3 uid="uid://bcdg4sigkkarn"]

[ext_resource type="Script" path="res://engine/HUD/HUD.gd" id="1_c6rt3"]
[ext_resource type="Script" path="res://engine/HUD/CircularContainer.gd" id="2_6366s"]
[ext_resource type="Script" path="res://engine/HUD/Radar.gd" id="3_sisr2"]
[ext_resource type="Script" path="res://engine/HUD/InteractionBoard.gd" id="4_pwp5t"]
[ext_resource type="Script" path="res://engine/HUD/MessageBoard.gd" id="5_dc40w"]
[ext_resource type="Texture2D" uid="uid://djvpeq1ktwq5" path="res://assets/textures/crosshair.png" id="6_1fa4m"]
[ext_resource type="Theme" path="res://engine/HUD/ui.theme" id="7_hmh0t"]

[sub_resource type="Animation" id="63"]
resource_name = "FadeIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="65"]
resource_name = "FadeOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="64"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f4tbb"]
_data = {
"FadeIn": SubResource("63"),
"FadeOut": SubResource("65"),
"RESET": SubResource("64")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c6rt3")

[node name="VerticalSections" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Top" type="HBoxContainer" parent="VerticalSections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Radar" type="Container" parent="VerticalSections/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("2_6366s")
spread_anlge = 30.0
floaters_scale = 0.1

[node name="Radar_meter" type="ColorRect" parent="VerticalSections/Top/Radar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0)
script = ExtResource("3_sisr2")
actor_path = NodePath("../../../../..")
background = Color(0.443137, 0.647059, 1, 0.611765)
border = Color(0.439216, 0.439216, 0.439216, 0.819608)
border_resolution = 50
border_width = 7
health_color = Color(0.705882, 0.0509804, 0.0509804, 1)
shield_color = Color(0, 0.905882, 1, 1)

[node name="Center" type="Control" parent="VerticalSections/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Right" type="VBoxContainer" parent="VerticalSections/Top"]
layout_mode = 2

[node name="Fill5" type="Control" parent="VerticalSections/Top/Right"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="AspectRatioContainer" type="CenterContainer" parent="VerticalSections/Top/Right"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fill4" type="Control" parent="VerticalSections/Top/Right/AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="InteractionBoard" type="CenterContainer" parent="VerticalSections/Top/Right"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("4_pwp5t")

[node name="Text" type="Label" parent="VerticalSections/Top/Right/InteractionBoard"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
text = "Press E to pick up \"WAAAHOOO\""

[node name="AnimationPlayer" type="AnimationPlayer" parent="VerticalSections/Top/Right/InteractionBoard"]
libraries = {
"": SubResource("AnimationLibrary_f4tbb")
}

[node name="Mid" type="HBoxContainer" parent="VerticalSections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
alignment = 1

[node name="MessageBoard" type="VBoxContainer" parent="VerticalSections/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
alignment = 1
script = ExtResource("5_dc40w")

[node name="Fill3" type="Control" parent="VerticalSections/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="crosshair" type="TextureRect" parent="VerticalSections/Mid"]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_1fa4m")
stretch_mode = 1

[node name="border" type="TextureRect" parent="VerticalSections/Mid/crosshair"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
size_flags_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("6_1fa4m")
expand_mode = 1
stretch_mode = 1

[node name="Fill4" type="Control" parent="VerticalSections/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Right" type="Control" parent="VerticalSections/Mid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Bottom" type="HBoxContainer" parent="VerticalSections"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Fill3" type="Control" parent="VerticalSections/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Fill4" type="Control" parent="VerticalSections/Bottom"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Weapons" type="VBoxContainer" parent="VerticalSections/Bottom"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="name" type="Label" parent="VerticalSections/Bottom/Weapons"]
layout_mode = 2
text = "AK 47"
uppercase = true

[node name="Ammo" type="HBoxContainer" parent="VerticalSections/Bottom/Weapons"]
layout_mode = 2
mouse_filter = 2

[node name="bullets" type="Label" parent="VerticalSections/Bottom/Weapons/Ammo"]
layout_mode = 2
theme = ExtResource("7_hmh0t")
text = "12"
uppercase = true

[node name="shadow" type="ColorRect" parent="VerticalSections/Bottom/Weapons/Ammo"]
self_modulate = Color(1, 1, 1, 0.588235)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="line" type="ColorRect" parent="VerticalSections/Bottom/Weapons/Ammo/shadow"]
layout_mode = 0
mouse_filter = 2

[node name="ammo" type="Label" parent="VerticalSections/Bottom/Weapons/Ammo"]
layout_mode = 2
text = "999"
uppercase = true
